--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.2",
     "react-router-dom": "^6.21.1",
     "sort-by": "^0.0.2"
   },
